force-app/main/default/objects/copadoconnect__Copado_Integration__c/copadoconnect__Copado_Integration__c.object-meta.xml
<CustomObject>
    <label>Copado Integration</label>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copado Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>