force-app/main/default/objects/copadoconnect__Copado_Integration__c/fields/copadoconnect__Appendix__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Appendix__c</fullName>
    <inlineHelpText>When creating one to multiple project mapping between JIRA/ADO and Salesforce, use
        this field by providing unique text values for each Copado Integration record under same
        project Key. This is used only for JIRA/ADO as provider.</inlineHelpText>
    <label>Appendix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>