force-app/main/default/objects/copadoconnect__Copado_Integration__c/fields/copadoconnect__Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Connection_Status__c</fullName>
    <inlineHelpText>The status of the named credential connection. Draft = Created and Saved, Connected = You have successfully authorized and connected to a Third Party application, Failed = Failed connection due to configuration or authorization issues.</inlineHelpText>
    <label>Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>