force-app/main/default/objects/copadoconnect__Copado_Integration__c/fields/copadoconnect__Description__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>