force-app/main/default/objects/copadoconnect__Copado_Integration__c/fields/copadoconnect__External_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__External_Project_ID__c</fullName>
    <label>External Project ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>