force-app/main/default/objects/copadoconnect__Copado_Integration__c/fields/copadoconnect__Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Integration_Status__c</fullName>
    <inlineHelpText>This represents the status of the integration and the syncing of records.</inlineHelpText>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active with Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>