force-app/main/default/objects/copadoconnect__Copado_Integration__c/fields/copadoconnect__Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Named_Credential__c</fullName>
    <label>Named Credential</label>
    <length>120</length>
    <type>Text</type>
</CustomField>