force-app/main/default/objects/copadoconnect__Copado_Integration__c/fields/copadoconnect__Project__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>copado__Project__c</referenceTo>
    <relationshipLabel>Copado Integrations</relationshipLabel>
    <relationshipName>Copado_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>