force-app/main/default/objects/copadoconnect__Copado_Integration__c/fields/copadoconnect__Provider__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Provider__c</fullName>
    <label>Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JIRA</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>AzureDevOps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>