force-app/main/default/objects/copadoconnect__Copado_Integration__c/fields/copadoconnect__WIQL_Extended_Filter__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__WIQL_Extended_Filter__c</fullName>
    <label>WIQL Extended Filter</label>
    <type>TextArea</type>
</CustomField>