force-app/main/default/objects/copadoconnect__Copado_Integration__c/listViews/copadoconnect__All.listView-meta.xml
<ListView>
    <fullName>copadoconnect__All</fullName>
    <columns>NAME</columns>
    <columns>copadoconnect__Provider__c</columns>
    <columns>copadoconnect__Project__c</columns>
    <columns>copadoconnect__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>