force-app/main/default/objects/copadoconnect__Copado_Integration__c/listViews/copadoconnect__All_Copado_Integrations.listView-meta.xml
<ListView>
    <fullName>copadoconnect__All_Copado_Integrations</fullName>
    <columns>NAME</columns>
    <columns>copadoconnect__Provider__c</columns>
    <columns>copadoconnect__Project__c</columns>
    <columns>copadoconnect__Connection_Status__c</columns>
    <columns>copadoconnect__Integration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Copado Integrations</label>
</ListView>